# Turk-NLP

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
config/: default_config.json  logger_config.yaml
core/: __init__.py  lemmatizer.py  normalizer.py  pos_tagger.py  sentence_splitter.py  tokenizer.py  utils.py
data/: stopwords_tr.txt
docs/: conf.py  index.rst  usage.rst
examples/: basic_usage.ipynb  sentiment_example.ipynb  summarize_example.ipynb
models/: __init__.py  downloader.py  tr_bert_base.py  tr_bert_sentiment.py  tr_bert_summarizer.py
pipelines/: __init__.py  basic_pipeline.py  sentiment_pipeline.py  summarize_pipeline.py
tests/: test_lemmatizer.py  test_pipelines.py  test_pos_tagger.py  test_tokenizer.py
utils/: file_io.py  logging_utils.py  preprocessing.py
